--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@ spring.application.name=ecommerce-backend
 
 server.port=${PORT:8080}
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+## Database Configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Database Configuration for Render.com
-# spring.datasource.url=jdbc:postgresql://dpg-d5qiefcoud1c73e7afog-a:5432/ecommerce_db_i9tt
-# spring.datasource.username=ecommerce_db_i9tt_user
-# spring.datasource.password=1MaSRDwm7XPDJdiy0YgEru7Zzp90Q2oT
-# spring.datasource.driver-class-name=org.postgresql.Driver
+ Database Configuration for Render.com
+ spring.datasource.url=jdbc:postgresql://dpg-d5qiefcoud1c73e7afog-a:5432/ecommerce_db_i9tt
+ spring.datasource.username=ecommerce_db_i9tt_user
+ spring.datasource.password=1MaSRDwm7XPDJdiy0YgEru7Zzp90Q2oT
+ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
